# paper-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/paper_agent/: config.py  db.py  dependencies.py  main.py  models.py  schemas.py
backend/paper_agent/api/: serializers.py
backend/paper_agent/api/routes/: chat.py  papers.py
backend/paper_agent/scripts/: __init__.py
backend/paper_agent/services/: __init__.py  abstract_fetcher.py  browser_use_service.py  chat.py  database_query.py  embeddings.py  ingestion.py  markdown_parser.py  paper_lookup.py  pdf_markdown.py  retrieval.py  web_search.py
backend/paper_agent/services/chat/: __init__.py  events.py  output.py  prompts.py  service.py  tools.py  types.py
backend/tests/: test_abstract_fetcher.py  test_browser_use_service.py  test_chat_service.py  test_database_query_service.py  test_markdown_parser.py  test_paper_lookup.py  test_pdf_markdown.py  test_web_search_service.py
browser-service/: Dockerfile  README.md  pyproject.toml
browser-service/scripts/: browser_task_smoke.py  playwright_smoke.py
browser-service/src/browser_service/: __init__.py  config.py  main.py  schemas.py  service.py
docs/: conference-binding.md  system-changes.md
frontend/: Dockerfile  components.json  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
paper_agent/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
src/: App.tsx  index.css  types.ts
tests/: test_markdown_parser.py
(+25 files in other folders)
