[project]
name = "paper-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "deepagents>=0.4.12",
    "fastapi>=0.135.2",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "langchain-openai>=1.1.12",
    "markitdown[pdf]>=0.1.5",
    "openai>=2.30.0",
    "openai-agents[sqlalchemy]>=0.13.3",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
